--- a/scenes/vue_prof_selection_note.fxml
+++ b/scenes/vue_prof_selection_note.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
@@ -18,6 +19,7 @@
 
 <VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
   <children>
+      <Label text="cours :" />
     <MenuBar VBox.vgrow="NEVER">
       <menus>
         <Menu mnemonicParsing="false" text="Mon compte">
@@ -99,7 +101,7 @@
                                         <RowConstraints maxHeight="312.0" minHeight="10.0" prefHeight="312.0" vgrow="SOMETIMES" />
                                       </rowConstraints>
                                        <children>
-                                          <ComboBox prefHeight="30.0" prefWidth="276.0" />
+                                          <ComboBox prefHeight="30.0" prefWidth="276.0" promptText="Élève" />
                                           <TableView prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
                                             <columns>
                                               <TableColumn prefWidth="145.0" text="note" />
