--- a/scenes/ajout_note.fxml
+++ b/scenes/ajout_note.fxml
@@ -69,10 +69,11 @@
                   </TableView>
                   <GridPane GridPane.rowIndex="2">
                     <columnConstraints>
-                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="162.0" minWidth="10.0" prefWidth="162.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="175.0" minWidth="10.0" prefWidth="133.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="154.0" minWidth="10.0" prefWidth="107.0" />
-                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="218.0" minWidth="10.0" prefWidth="218.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="176.0" minWidth="10.0" prefWidth="176.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="175.0" minWidth="10.0" prefWidth="126.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="206.0" minWidth="10.0" prefWidth="103.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="268.0" minWidth="10.0" prefWidth="119.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="218.0" minWidth="10.0" prefWidth="119.0" />
                     </columnConstraints>
                     <rowConstraints>
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -81,8 +82,8 @@
                         <TextField text="Nom" />
                         <TextField text="Prénom" GridPane.columnIndex="1" />
                         <TextField text="Note" GridPane.columnIndex="2" />
-                        <Button mnemonicParsing="false" prefHeight="44.0" prefWidth="108.0" text="supprimer" GridPane.columnIndex="3" GridPane.halignment="RIGHT" GridPane.valignment="CENTER" />
-                        <Button mnemonicParsing="false" prefHeight="44.0" prefWidth="108.0" text="ajouter" GridPane.columnIndex="3" />
+                        <Button mnemonicParsing="false" prefHeight="44.0" prefWidth="108.0" text="ajouter" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
+                        <Button mnemonicParsing="false" prefHeight="44.0" prefWidth="108.0" text="supprimer" GridPane.columnIndex="4" />
                      </children>
                   </GridPane>
                </children>
