--- a/scenes/vue_adminisrtation.fxml
+++ b/scenes/vue_adminisrtation.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
@@ -32,11 +33,12 @@
               </columnConstraints>
               <rowConstraints>
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <GridPane GridPane.rowIndex="2">
+                  <GridPane GridPane.rowIndex="3">
                     <columnConstraints>
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -46,14 +48,21 @@
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
-                        <TextField prefHeight="15.0" prefWidth="295.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                        <TextField prefHeight="15.0" prefWidth="295.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                           <GridPane.margin>
+                              <Insets left="25.0" right="25.0" />
+                           </GridPane.margin></TextField>
                         <Label prefHeight="32.0" prefWidth="230.0" text="delais pour rentrer les notes:" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
                         <Label prefHeight="32.0" prefWidth="230.0" text="delais pour justifier une absence:" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
-                        <TextField GridPane.rowIndex="1" />
+                        <TextField GridPane.rowIndex="1">
+                           <GridPane.margin>
+                              <Insets left="25.0" right="25.0" />
+                           </GridPane.margin></TextField>
                      </children>
                   </GridPane>
                   <Button mnemonicParsing="false" prefHeight="61.0" prefWidth="520.0" text="satisfaction" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
-                  <Button mnemonicParsing="false" prefHeight="61.0" prefWidth="520.0" text="etudiants" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
+                  <Button mnemonicParsing="false" prefHeight="61.0" prefWidth="520.0" text="etudiants" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
+                  <Button layoutX="70.0" layoutY="212.0" mnemonicParsing="false" prefHeight="61.0" prefWidth="520.0" text="Modules" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
                </children>
             </GridPane>
          </children>
