--- a/scenes/vue_administration.fxml
+++ b/scenes/vue_administration.fxml
@@ -32,13 +32,14 @@
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
               </columnConstraints>
               <rowConstraints>
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <GridPane GridPane.rowIndex="3">
+                  <GridPane GridPane.rowIndex="4">
                     <columnConstraints>
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -60,9 +61,10 @@
                            </GridPane.margin></TextField>
                      </children>
                   </GridPane>
-                  <Button mnemonicParsing="false" prefHeight="61.0" prefWidth="520.0" text="satisfaction" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
-                  <Button mnemonicParsing="false" prefHeight="61.0" prefWidth="520.0" text="etudiants" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
-                  <Button layoutX="70.0" layoutY="212.0" mnemonicParsing="false" prefHeight="61.0" prefWidth="520.0" text="Modules" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
+                  <Button layoutX="70.0" layoutY="92.0" mnemonicParsing="false" prefHeight="63.0" prefWidth="449.0" text="absences" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
+                  <Button mnemonicParsing="false" prefHeight="63.0" prefWidth="449.0" text="satisfaction" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
+                  <Button mnemonicParsing="false" prefHeight="63.0" prefWidth="449.0" text="modules" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
+                  <Button mnemonicParsing="false" prefHeight="63.0" prefWidth="449.0" text="étudiants" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER" />
                </children>
             </GridPane>
          </children>
