--- a/scenes/vue_liste_modules.fxml
+++ b/scenes/vue_liste_modules.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root prefHeight="400.0" prefWidth="640.0" type="VBox" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ModulesProfController">
   <children>
     <MenuBar VBox.vgrow="NEVER">
       <menus>
@@ -29,7 +29,7 @@
             <Font size="18.0" />
           </font>
         </Label>
-            <TableView layoutX="-1.0" onMouseClicked="#Selection" prefHeight="371.0" prefWidth="640.0">
+            <TableView fx:id="tableModulesProf" layoutX="-1.0" onMouseClicked="#Selection" prefHeight="371.0" prefWidth="640.0">
               <columns>
                 <TableColumn fx:id="coursColumn" prefWidth="639.0" text="coursColumn" />
               </columns>
@@ -37,4 +37,4 @@
       </children>
     </AnchorPane>
   </children>
-</VBox>
+</fx:root>
