--- a/scenes/ajout_absence.fxml
+++ b/scenes/ajout_absence.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
@@ -8,14 +9,15 @@
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root prefHeight="400.0" prefWidth="640.0" type="VBox" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="AjoutAbsenceController">
    <children>
       <MenuBar VBox.vgrow="NEVER">
          <menus>
@@ -28,8 +30,8 @@
          </menus>
       </MenuBar>
       <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS" />
-      <TitledPane prefHeight="370.0" prefWidth="638.0" text="Nouvelle absence">
-         <content>
+      <BorderPane prefHeight="371.0" prefWidth="640.0">
+         <center>
             <GridPane prefHeight="296.0" prefWidth="652.0">
                <columnConstraints>
                   <ColumnConstraints hgrow="SOMETIMES" maxWidth="176.0" minWidth="10.0" prefWidth="142.0" />
@@ -42,17 +44,27 @@
                   <RowConstraints maxHeight="285.0" minHeight="10.0" prefHeight="166.0" vgrow="SOMETIMES" />
                </rowConstraints>
                <children>
-                  <Button mnemonicParsing="false" prefHeight="46.0" prefWidth="122.0" text="ajouter" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
-                  <DatePicker GridPane.columnIndex="2" GridPane.rowIndex="1" GridPane.valignment="TOP" />
-                  <ComboBox prefHeight="26.0" prefWidth="183.0" promptText="Élève" GridPane.columnIndex="1" GridPane.rowIndex="1" GridPane.valignment="TOP" />
-                  <ComboBox layoutX="185.0" layoutY="71.0" prefHeight="26.0" prefWidth="181.0" promptText="Module" GridPane.rowIndex="1" GridPane.valignment="TOP" />
-                  <TextField GridPane.columnIndex="1" />
-                  <TextField GridPane.columnIndex="3" />
+                  <Button fx:id="ajouterAbsenceButton" mnemonicParsing="false" onAction="#ajouterAbsence" prefHeight="46.0" prefWidth="122.0" text="ajouter" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
+                  <DatePicker fx:id="dateAbsencePicker" onAction="#selectionDate" GridPane.columnIndex="2" GridPane.rowIndex="1" GridPane.valignment="TOP" />
+                  <ComboBox fx:id="comboEleveAbsence" onAction="#selectionEleveAbsence" prefHeight="26.0" prefWidth="183.0" promptText="Élève" GridPane.columnIndex="1" GridPane.rowIndex="1" GridPane.valignment="TOP" />
+                  <ComboBox fx:id="comboModuleAbsence" layoutX="185.0" layoutY="71.0" onAction="#selectionModuleAbsence" prefHeight="26.0" prefWidth="181.0" promptText="Module" GridPane.rowIndex="1" GridPane.valignment="TOP" />
+                  <TextField fx:id="heureDebutField" GridPane.columnIndex="1" />
+                  <TextField fx:id="heureFinField" GridPane.columnIndex="3" />
                   <Label text="Heure de début:" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
                   <Label layoutX="28.0" layoutY="87.0" text="Heure de fin:" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
                </children>
             </GridPane>
-         </content>
-      </TitledPane>
+         </center>
+         <top>
+            <Label text="Nouvelle absence" BorderPane.alignment="CENTER">
+               <padding>
+                  <Insets top="25.0" />
+               </padding>
+               <font>
+                  <Font size="24.0" />
+               </font>
+            </Label>
+         </top>
+      </BorderPane>
    </children>
-</VBox>
+</fx:root>
