--- a/scenes/vue_admin_satisfaction.fxml
+++ b/scenes/vue_admin_satisfaction.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root prefHeight="400.0" prefWidth="640.0" type="VBox" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="satisfactionModulesAdministrationController">
   <children>
     <MenuBar VBox.vgrow="NEVER">
       <menus>
@@ -42,8 +42,8 @@
                 <RowConstraints maxHeight="303.0" minHeight="10.0" prefHeight="303.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <ComboBox prefHeight="37.0" prefWidth="572.0" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
-                  <TableView prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
+                  <ComboBox fx:id="comboModuleSatisfaction" onAction="#selectionModuleSatisfaction" prefHeight="37.0" prefWidth="572.0" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
+                  <TableView fx:id="tableSatisfactionModule" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
                     <columns>
                       <TableColumn prefWidth="319.0" text="notes" />
                       <TableColumn prefWidth="320.0" text="commentaires" />
@@ -54,4 +54,4 @@
       </children>
     </AnchorPane>
   </children>
-</VBox>
+</fx:root>
