--- a/scenes/vue_administration.fxml
+++ b/scenes/vue_administration.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root prefHeight="400.0" prefWidth="640.0" type="VBox" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="MenuAdministrationController">
   <children>
     <MenuBar VBox.vgrow="NEVER">
       <menus>
@@ -49,25 +49,25 @@
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
-                        <TextField prefHeight="15.0" prefWidth="295.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                        <TextField fx:id="delaisAbsence" onAction="#modifierDelaisAbsence" prefHeight="15.0" prefWidth="295.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
                            <GridPane.margin>
                               <Insets left="25.0" right="25.0" />
                            </GridPane.margin></TextField>
                         <Label prefHeight="32.0" prefWidth="230.0" text="delais pour rentrer les notes:" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
                         <Label prefHeight="32.0" prefWidth="230.0" text="delais pour justifier une absence:" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
-                        <TextField GridPane.rowIndex="1">
+                        <TextField fx:id="delaisNotesField" onAction="#modifierDelaisNotes" GridPane.rowIndex="1">
                            <GridPane.margin>
                               <Insets left="25.0" right="25.0" />
                            </GridPane.margin></TextField>
                      </children>
                   </GridPane>
-                  <Button layoutX="70.0" layoutY="92.0" mnemonicParsing="false" prefHeight="63.0" prefWidth="449.0" text="absences" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
-                  <Button mnemonicParsing="false" prefHeight="63.0" prefWidth="449.0" text="satisfaction" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
-                  <Button mnemonicParsing="false" prefHeight="63.0" prefWidth="449.0" text="modules" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
-                  <Button mnemonicParsing="false" prefHeight="63.0" prefWidth="449.0" text="étudiants" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER" />
+                  <Button fx:id="absencesButton" layoutX="70.0" layoutY="92.0" mnemonicParsing="false" onAction="#selectionAbsences" prefHeight="63.0" prefWidth="449.0" text="absences" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
+                  <Button fx:id="satisfactionButton" mnemonicParsing="false" onAction="#selectionSatisfaction" prefHeight="63.0" prefWidth="449.0" text="satisfaction" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
+                  <Button fx:id="modulesButton" mnemonicParsing="false" onAction="#selectionModules" prefHeight="63.0" prefWidth="449.0" text="modules" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
+                  <Button fx:id="etudiantsButton" mnemonicParsing="false" onAction="#selectionEtudiants" prefHeight="63.0" prefWidth="449.0" text="étudiants" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER" />
                </children>
             </GridPane>
          </children>
     </AnchorPane>
   </children>
-</VBox>
+</fx:root>
