--- a/scenes/vue_etudiant_selection_note.fxml
+++ b/scenes/vue_etudiant_selection_note.fxml
@@ -16,7 +16,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root prefHeight="400.0" prefWidth="640.0" type="VBox" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="SelectionNoteAdminController">
    <children>
       <Label text="Module:" />
       <MenuBar VBox.vgrow="NEVER">
@@ -48,8 +48,8 @@
                                           <RowConstraints maxHeight="313.0" minHeight="10.0" prefHeight="313.0" vgrow="SOMETIMES" />
                                        </rowConstraints>
                                        <children>
-                                          <ComboBox prefHeight="34.0" prefWidth="280.0" promptText="Module" />
-                                          <TableView prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
+                                          <ComboBox fx:id="comboModuleNotes" onAction="#selectionModuleNote" prefHeight="34.0" prefWidth="280.0" promptText="Module" />
+                                          <TableView fx:id="tableNotesModule" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
                                              <columns>
                                                 <TableColumn prefWidth="135.0" text="Nom note" />
                                                 <TableColumn prefWidth="136.0" text="note" />
@@ -74,8 +74,8 @@
                                           <RowConstraints maxHeight="314.0" minHeight="10.0" prefHeight="314.0" vgrow="SOMETIMES" />
                                        </rowConstraints>
                                        <children>
-                                          <ComboBox prefHeight="34.0" prefWidth="280.0" promptText="Module" />
-                                          <TableView prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
+                                          <ComboBox fx:id="comboModuleAbsence" onAction="#selectionModuleAbsence" prefHeight="34.0" prefWidth="280.0" promptText="Module" />
+                                          <TableView fx:id="tableAbsencesModule" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
                                              <columns>
                                                 <TableColumn prefWidth="131.0" text="date" />
                                                 <TableColumn prefWidth="140.0" text="justification" />
@@ -100,8 +100,8 @@
                                           <RowConstraints maxHeight="312.0" minHeight="10.0" prefHeight="312.0" vgrow="SOMETIMES" />
                                        </rowConstraints>
                                        <children>
-                                          <ComboBox prefHeight="30.0" prefWidth="276.0" promptText="Module" />
-                                          <TableView prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
+                                          <ComboBox fx:id="comboModuleStaisfaction" onAction="#selectionModuleSatisfaction" prefHeight="30.0" prefWidth="276.0" promptText="Module" />
+                                          <TableView fx:id="tableSatisfactionModule" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
                                              <columns>
                                                 <TableColumn prefWidth="145.0" text="note" />
                                                 <TableColumn prefWidth="126.0" text="commentaire" />
@@ -130,7 +130,7 @@
                               <RowConstraints maxHeight="340.0" minHeight="0.0" prefHeight="0.0" vgrow="SOMETIMES" />
                            </rowConstraints>
                            <children>
-                              <TableView prefHeight="367.0" prefWidth="374.0">
+                              <TableView fx:id="tableNotesEleve" prefHeight="367.0" prefWidth="374.0">
                                  <columns>
                                     <TableColumn prefWidth="110.0" text="UE" />
                                     <TableColumn prefWidth="136.0" text="Module" />
@@ -146,4 +146,4 @@
          </children>
       </AnchorPane>
    </children>
-</VBox>
+</fx:root>
