--- a/scenes/vue_absences_administration.fxml
+++ b/scenes/vue_absences_administration.fxml
@@ -2,84 +2,82 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.CheckBox?>
-<?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<fx:root prefHeight="400.0" prefWidth="640.0" type="VBox" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="AbsenceAdministrationController">
-  <children>
-    <MenuBar VBox.vgrow="NEVER">
-      <menus>
-        <Menu mnemonicParsing="false" text="Mon compte">
-          <items>
-            <MenuItem mnemonicParsing="false" text="retour au menu" />
-            <MenuItem mnemonicParsing="false" text="Quit" />
-          </items>
-        </Menu>
-      </menus>
-    </MenuBar>
-    <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
-         <children>
-            <GridPane prefHeight="371.0" prefWidth="647.0">
-              <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-              </columnConstraints>
-              <rowConstraints>
-                  <RowConstraints maxHeight="245.0" minHeight="10.0" prefHeight="245.0" vgrow="SOMETIMES" />
-                <RowConstraints maxHeight="316.0" minHeight="10.0" prefHeight="126.0" vgrow="SOMETIMES" />
-              </rowConstraints>
+<AnchorPane fx:id="anchorAbsenceAdmin" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.AbsenceAdministrationController">
+   <children>
+      <VBox prefHeight="400.0" prefWidth="640.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <children>
+          <MenuBar VBox.vgrow="NEVER">
+            <menus>
+              <Menu mnemonicParsing="false" text="Mon compte">
+                <items>
+                  <MenuItem fx:id="retourMenu" mnemonicParsing="false" onAction="#fonctionRetour" text="retour au menu" />
+                  <MenuItem fx:id="quitMenu" mnemonicParsing="false" onAction="#fonctionQuit" text="Quit" />
+                </items>
+              </Menu>
+            </menus>
+          </MenuBar>
+          <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
                <children>
-                  <TableView fx:id="tableAbsences" prefHeight="140.0" prefWidth="647.0">
-                    <columns>
-                      <TableColumn prefWidth="126.0" text="Nom" />
-                      <TableColumn prefWidth="86.0" text="Prenom" />
-                        <TableColumn prefWidth="100.0" text="identifiant" />
-                        <TableColumn prefWidth="102.0" text="module" />
-                        <TableColumn prefWidth="109.0" text="date" />
-                        <TableColumn prefWidth="123.0" text="Justification" />
-                    </columns>
-                  </TableView>
-                  <GridPane GridPane.rowIndex="1">
+                  <GridPane prefHeight="371.0" prefWidth="647.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                     <columnConstraints>
-                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="233.0" minWidth="10.0" prefWidth="233.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="201.0" minWidth="10.0" prefWidth="201.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="178.0" minWidth="10.0" prefWidth="142.0" />
-                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="95.0" minWidth="10.0" prefWidth="71.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                     </columnConstraints>
                     <rowConstraints>
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints maxHeight="245.0" minHeight="10.0" prefHeight="245.0" vgrow="SOMETIMES" />
+                      <RowConstraints maxHeight="316.0" minHeight="10.0" prefHeight="126.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
-                        <CheckBox fx:id="justificationCheckBox" mnemonicParsing="false" onAction="#justificationAbsence" prefHeight="32.0" prefWidth="29.0" text="justifier" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
-                           <padding>
-                              <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                           </padding>
-                        </CheckBox>
-                        <DatePicker fx:id="dateAbsencePicker" onAction="#selectionDateAbsence" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
-                        <ComboBox fx:id="moduleCombo" onAction="#selectionModuleAbsence" prefHeight="26.0" prefWidth="215.0" promptText="module" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
-                           <GridPane.margin>
-                              <Insets left="10.0" right="20.0" />
-                           </GridPane.margin>
-                        </ComboBox>
-                        <ComboBox fx:id="etudiantCombo" onAction="#selectionEtudiant" prefHeight="26.0" prefWidth="213.0" promptText="nom,prenom,id" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
-                           <GridPane.margin>
-                              <Insets left="10.0" right="10.0" />
-                           </GridPane.margin>
-                        </ComboBox>
+                        <TableView fx:id="tableAbsences" prefHeight="140.0" prefWidth="647.0">
+                          <columns>
+                            <TableColumn prefWidth="126.0" text="Nom" />
+                            <TableColumn prefWidth="86.0" text="Prenom" />
+                              <TableColumn prefWidth="100.0" text="identifiant" />
+                              <TableColumn prefWidth="102.0" text="module" />
+                              <TableColumn prefWidth="109.0" text="date" />
+                              <TableColumn prefWidth="123.0" text="Justification" />
+                          </columns>
+                           <columnResizePolicy>
+                              <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                           </columnResizePolicy>
+                        </TableView>
+                        <GridPane GridPane.rowIndex="1">
+                          <columnConstraints>
+                            <ColumnConstraints hgrow="SOMETIMES" maxWidth="233.0" minWidth="10.0" prefWidth="233.0" />
+                              <ColumnConstraints hgrow="SOMETIMES" maxWidth="201.0" minWidth="10.0" prefWidth="201.0" />
+                              <ColumnConstraints hgrow="SOMETIMES" maxWidth="178.0" minWidth="10.0" prefWidth="142.0" />
+                            <ColumnConstraints hgrow="SOMETIMES" maxWidth="95.0" minWidth="10.0" prefWidth="71.0" />
+                          </columnConstraints>
+                          <rowConstraints>
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                          </rowConstraints>
+                           <children>
+                              <CheckBox fx:id="justificationCheckBox" mnemonicParsing="false" onAction="#justificationAbsence" prefHeight="32.0" prefWidth="29.0" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+                                 <padding>
+                                    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                                 </padding>
+                              </CheckBox>
+                              <TextField fx:id="etudantTextField" editable="false" />
+                              <TextField fx:id="moduleTextField" editable="false" GridPane.columnIndex="1" />
+                              <TextField fx:id="dateTextField" editable="false" GridPane.columnIndex="2" />
+                           </children>
+                        </GridPane>
                      </children>
                   </GridPane>
                </children>
-            </GridPane>
-         </children>
-    </AnchorPane>
-  </children>
-</fx:root>
+          </AnchorPane>
+        </children>
+      </VBox>
+   </children>
+</AnchorPane>
