--- a/scenes/vue_administration.fxml
+++ b/scenes/vue_administration.fxml
@@ -13,61 +13,65 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<fx:root prefHeight="400.0" prefWidth="640.0" type="VBox" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="MenuAdministrationController">
-  <children>
-    <MenuBar VBox.vgrow="NEVER">
-      <menus>
-        <Menu mnemonicParsing="false" text="Mon compte">
-          <items>
-            <MenuItem mnemonicParsing="false" text="retour au menu" />
-            <MenuItem mnemonicParsing="false" text="Quit" />
-          </items>
-        </Menu>
-      </menus>
-    </MenuBar>
-    <AnchorPane maxHeight="-1.0" maxWidth="-1.0" VBox.vgrow="ALWAYS">
-         <children>
-            <GridPane prefHeight="371.0" prefWidth="640.0">
-              <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-              </columnConstraints>
-              <rowConstraints>
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-              </rowConstraints>
+<AnchorPane fx:id="anchorMenuAdministration" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.MenuAdministrationController">
+   <children>
+      <VBox prefHeight="400.0" prefWidth="640.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <children>
+          <MenuBar VBox.vgrow="NEVER">
+            <menus>
+              <Menu mnemonicParsing="false" text="Mon compte">
+                <items>
+                  <MenuItem fx:id="retourMenu" mnemonicParsing="false" onAction="#fonctionRetour" text="retour au menu" />
+                  <MenuItem fx:id="quiitMenu" mnemonicParsing="false" onAction="#fonctionQuit" text="Quit" />
+                </items>
+              </Menu>
+            </menus>
+          </MenuBar>
+          <AnchorPane maxHeight="-1.0" maxWidth="-1.0" VBox.vgrow="ALWAYS">
                <children>
-                  <GridPane GridPane.rowIndex="4">
+                  <GridPane prefHeight="371.0" prefWidth="640.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                     <columnConstraints>
-                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                     </columnConstraints>
                     <rowConstraints>
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
-                        <TextField fx:id="delaisAbsence" onAction="#modifierDelaisAbsence" prefHeight="15.0" prefWidth="295.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
-                           <GridPane.margin>
-                              <Insets left="25.0" right="25.0" />
-                           </GridPane.margin></TextField>
-                        <Label prefHeight="32.0" prefWidth="230.0" text="delais pour rentrer les notes:" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
-                        <Label prefHeight="32.0" prefWidth="230.0" text="delais pour justifier une absence:" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
-                        <TextField fx:id="delaisNotesField" onAction="#modifierDelaisNotes" GridPane.rowIndex="1">
-                           <GridPane.margin>
-                              <Insets left="25.0" right="25.0" />
-                           </GridPane.margin></TextField>
+                        <GridPane GridPane.rowIndex="3">
+                          <columnConstraints>
+                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                          </columnConstraints>
+                          <rowConstraints>
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                          </rowConstraints>
+                           <children>
+                              <TextField fx:id="delaisAbsence" onAction="#modifierDelaisAbsence" prefHeight="15.0" prefWidth="295.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                                 <GridPane.margin>
+                                    <Insets left="25.0" right="25.0" />
+                                 </GridPane.margin>
+                              </TextField>
+                              <Label prefHeight="32.0" prefWidth="230.0" text="delais pour rentrer les notes:" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
+                              <Label prefHeight="32.0" prefWidth="230.0" text="delais pour justifier une absence:" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
+                              <TextField fx:id="delaisNotesField" onAction="#modifierDelaisNotes" GridPane.rowIndex="1">
+                                 <GridPane.margin>
+                                    <Insets left="25.0" right="25.0" />
+                                 </GridPane.margin>
+                              </TextField>
+                           </children>
+                        </GridPane>
+                        <Button fx:id="absencesButton" layoutX="70.0" layoutY="92.0" mnemonicParsing="false" onAction="#selectionAbsences" prefHeight="63.0" prefWidth="449.0" text="absences" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
+                        <Button fx:id="modulesButton" mnemonicParsing="false" onAction="#selectionModules" prefHeight="63.0" prefWidth="449.0" text="modules" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
+                        <Button fx:id="etudiantsButton" mnemonicParsing="false" onAction="#selectionEtudiants" prefHeight="63.0" prefWidth="449.0" text="bulletin étudiants" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
                      </children>
                   </GridPane>
-                  <Button fx:id="absencesButton" layoutX="70.0" layoutY="92.0" mnemonicParsing="false" onAction="#selectionAbsences" prefHeight="63.0" prefWidth="449.0" text="absences" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
-                  <Button fx:id="satisfactionButton" mnemonicParsing="false" onAction="#selectionSatisfaction" prefHeight="63.0" prefWidth="449.0" text="satisfaction" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
-                  <Button fx:id="modulesButton" mnemonicParsing="false" onAction="#selectionModules" prefHeight="63.0" prefWidth="449.0" text="modules" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
-                  <Button fx:id="etudiantsButton" mnemonicParsing="false" onAction="#selectionEtudiants" prefHeight="63.0" prefWidth="449.0" text="bulletin étudiants" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER" />
                </children>
-            </GridPane>
-         </children>
-    </AnchorPane>
-  </children>
-</fx:root>
+          </AnchorPane>
+        </children>
+      </VBox>
+   </children>
+</AnchorPane>
