--- a/scenes/vue_etudiant_selection_note.fxml
+++ b/scenes/vue_etudiant_selection_note.fxml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
@@ -9,63 +11,83 @@
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<fx:root prefHeight="400.0" prefWidth="640.0" type="VBox" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="SelectionNoteAdminController">
+<AnchorPane fx:id="anchorEtuNote" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.SelectionNoteEtudiantController">
    <children>
-      <Label text="Module:" />
-      <MenuBar VBox.vgrow="NEVER">
-         <menus>
-            <Menu mnemonicParsing="false" text="Mon compte">
-               <items>
-                  <MenuItem mnemonicParsing="false" text="Retour au menu" />
-                  <MenuItem mnemonicParsing="false" text="Quit" />
-               </items>
-            </Menu>
-         </menus>
-      </MenuBar>
-      <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
+      <VBox fx:id="vbox_etudiant" prefHeight="400.0" prefWidth="640.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <AnchorPane layoutX="368.0" prefHeight="370.0" prefWidth="272.0">
+            <Label text="Module:" />
+            <MenuBar VBox.vgrow="NEVER">
+               <menus>
+                  <Menu mnemonicParsing="false" text="Mon compte">
+                     <items>
+                        <MenuItem fx:id="retourMenu" mnemonicParsing="false" onAction="#fonctionRetour" text="Retour au menu" />
+                        <MenuItem fx:id="quitMenu" mnemonicParsing="false" onAction="#fonctionQuit" text="Quit" />
+                     </items>
+                  </Menu>
+               </menus>
+            </MenuBar>
+            <GridPane VBox.vgrow="ALWAYS">
+               <columnConstraints>
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="445.0" minWidth="10.0" prefWidth="317.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="370.0" minWidth="10.0" prefWidth="323.0" />
+               </columnConstraints>
+               <rowConstraints>
+                  <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+               </rowConstraints>
                <children>
-                  <TabPane prefHeight="394.0" prefWidth="272.0" tabClosingPolicy="UNAVAILABLE">
-                     <tabs>
-                        <Tab text="Notes">
-                           <content>
-                              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="288.0" prefWidth="225.0">
-                                 <children>
-                                    <GridPane prefHeight="366.0" prefWidth="272.0">
+                  <TableView fx:id="tableNotesEleve" prefHeight="367.0" prefWidth="374.0">
+                     <columns>
+                        <TableColumn fx:id="uETableColumn" prefWidth="110.0" text="UE" />
+                        <TableColumn fx:id="moduleTableColumn" prefWidth="136.0" text="Module" />
+                        <TableColumn fx:id="moyenneTableColumn" prefWidth="124.0" text="Moyenne" />
+                     </columns>
+                     <columnResizePolicy>
+                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                     </columnResizePolicy>
+                  </TableView>
+                  <AnchorPane GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.vgrow="ALWAYS">
+                     <children>
+                        <TabPane prefHeight="355.0" prefWidth="323.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                           <tabs>
+                              <Tab text="Notes">
+                                 <content>
+                                    <GridPane>
                                        <columnConstraints>
                                           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                                        </columnConstraints>
                                        <rowConstraints>
-                                          <RowConstraints maxHeight="172.0" minHeight="10.0" prefHeight="53.0" vgrow="SOMETIMES" />
-                                          <RowConstraints maxHeight="313.0" minHeight="10.0" prefHeight="313.0" vgrow="SOMETIMES" />
+                                          <RowConstraints maxHeight="172.0" minHeight="10.0" prefHeight="39.0" vgrow="SOMETIMES" />
+                                          <RowConstraints maxHeight="313.0" minHeight="10.0" prefHeight="283.0" vgrow="SOMETIMES" />
                                        </rowConstraints>
                                        <children>
-                                          <ComboBox fx:id="comboModuleNotes" onAction="#selectionModuleNote" prefHeight="34.0" prefWidth="280.0" promptText="Module" />
+                                          <ComboBox fx:id="comboModuleNotes" onAction="#selectionModuleNote" prefHeight="34.0" prefWidth="280.0" promptText="Module">
+                                             <GridPane.margin>
+                                                <Insets />
+                                             </GridPane.margin>
+                                          </ComboBox>
                                           <TableView fx:id="tableNotesModule" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
                                              <columns>
-                                                <TableColumn prefWidth="135.0" text="Nom note" />
-                                                <TableColumn prefWidth="136.0" text="note" />
+                                                <TableColumn fx:id="nomNoteColumn" prefWidth="135.0" text="Nom note" />
+                                                <TableColumn fx:id="noteColumn" prefWidth="136.0" text="note" />
                                              </columns>
+                                             <columnResizePolicy>
+                                                <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                                             </columnResizePolicy>
                                           </TableView>
                                        </children>
                                     </GridPane>
-                                 </children>
-                              </AnchorPane>
-                           </content>
-                        </Tab>
-                        <Tab text="Absences">
-                           <content>
-                              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-                                 <children>
-                                    <GridPane prefHeight="365.0" prefWidth="272.0">
+                                 </content>
+                              </Tab>
+                              <Tab text="Absences">
+                                 <content>
+                                    <GridPane>
                                        <columnConstraints>
                                           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                                        </columnConstraints>
@@ -77,73 +99,45 @@
                                           <ComboBox fx:id="comboModuleAbsence" onAction="#selectionModuleAbsence" prefHeight="34.0" prefWidth="280.0" promptText="Module" />
                                           <TableView fx:id="tableAbsencesModule" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
                                              <columns>
-                                                <TableColumn prefWidth="131.0" text="date" />
-                                                <TableColumn prefWidth="140.0" text="justification" />
+                                                <TableColumn fx:id="dateAbsenceColumn" prefWidth="131.0" text="date" />
+                                                <TableColumn fx:id="justificationColumn" prefWidth="140.0" text="justification" />
                                              </columns>
+                                             <columnResizePolicy>
+                                                <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                                             </columnResizePolicy>
                                           </TableView>
                                        </children>
                                     </GridPane>
-                                 </children>
-                              </AnchorPane>
-                           </content>
-                        </Tab>
-                        <Tab text="Satisfaction">
-                           <content>
-                              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-                                 <children>
-                                    <GridPane prefHeight="367.0" prefWidth="272.0">
+                                 </content>
+                              </Tab>
+                              <Tab text="Satisfaction">
+                                 <content>
+                                    <GridPane prefHeight="346.0" prefWidth="272.0">
                                        <columnConstraints>
                                           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                                        </columnConstraints>
                                        <rowConstraints>
-                                          <RowConstraints maxHeight="173.0" minHeight="10.0" prefHeight="55.0" vgrow="SOMETIMES" />
-                                          <RowConstraints maxHeight="312.0" minHeight="10.0" prefHeight="312.0" vgrow="SOMETIMES" />
+                                          <RowConstraints maxHeight="173.0" minHeight="10.0" prefHeight="46.0" vgrow="SOMETIMES" />
+                                          <RowConstraints maxHeight="312.0" minHeight="10.0" prefHeight="44.0" vgrow="SOMETIMES" />
+                                          <RowConstraints maxHeight="312.0" minHeight="10.0" prefHeight="153.0" vgrow="SOMETIMES" />
+                                          <RowConstraints maxHeight="312.0" minHeight="10.0" prefHeight="87.0" vgrow="SOMETIMES" />
                                        </rowConstraints>
                                        <children>
-                                          <ComboBox fx:id="comboModuleStaisfaction" onAction="#selectionModuleSatisfaction" prefHeight="30.0" prefWidth="276.0" promptText="Module" />
-                                          <TableView fx:id="tableSatisfactionModule" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
-                                             <columns>
-                                                <TableColumn prefWidth="145.0" text="note" />
-                                                <TableColumn prefWidth="126.0" text="commentaire" />
-                                             </columns>
-                                          </TableView>
+                                          <ComboBox fx:id="comboModuleStaisfaction" onAction="#selectionModuleSatisfaction" prefHeight="26.0" prefWidth="344.0" promptText="Module" GridPane.hgrow="ALWAYS" GridPane.vgrow="ALWAYS" />
+                                          <ComboBox fx:id="noteSatisfactionCombo" onAction="#selectionNoteSatisfaction" prefHeight="26.0" prefWidth="79.0" promptText="Note" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
+                                          <TextField fx:id="commentaireSatisfactionTextField" prefHeight="165.0" prefWidth="272.0" text="commentaire" GridPane.rowIndex="2" />
+                                          <Button fx:id="ajoutSatisfactionButton" mnemonicParsing="false" onAction="#ajouterSatisfaction" prefHeight="48.0" prefWidth="174.0" text="Nouvelle satisfaction" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="TOP" />
                                        </children>
                                     </GridPane>
-                                 </children>
-                              </AnchorPane>
-                           </content>
-                        </Tab>
-                     </tabs>
-                  </TabPane>
-               </children>
-            </AnchorPane>
-            <AnchorPane prefHeight="370.0" prefWidth="362.0">
-               <children>
-                  <Pane prefHeight="400.0" prefWidth="392.0">
-                     <children>
-                        <GridPane prefHeight="400.0" prefWidth="371.0">
-                           <columnConstraints>
-                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                           </columnConstraints>
-                           <rowConstraints>
-                              <RowConstraints maxHeight="400.0" minHeight="10.0" prefHeight="400.0" vgrow="SOMETIMES" />
-                              <RowConstraints maxHeight="340.0" minHeight="0.0" prefHeight="0.0" vgrow="SOMETIMES" />
-                           </rowConstraints>
-                           <children>
-                              <TableView fx:id="tableNotesEleve" prefHeight="367.0" prefWidth="374.0">
-                                 <columns>
-                                    <TableColumn prefWidth="110.0" text="UE" />
-                                    <TableColumn prefWidth="136.0" text="Module" />
-                                    <TableColumn prefWidth="124.0" text="Moyenne" />
-                                 </columns>
-                              </TableView>
-                           </children>
-                        </GridPane>
+                                 </content>
+                              </Tab>
+                           </tabs>
+                        </TabPane>
                      </children>
-                  </Pane>
+                  </AnchorPane>
                </children>
-            </AnchorPane>
+            </GridPane>
          </children>
-      </AnchorPane>
+      </VBox>
    </children>
-</fx:root>
+</AnchorPane>
