--- a/scenes/vue_liste_modules.fxml
+++ b/scenes/vue_liste_modules.fxml
@@ -12,38 +12,45 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<fx:root prefHeight="400.0" prefWidth="640.0" type="VBox" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ModulesProfController">
-  <children>
-    <MenuBar VBox.vgrow="NEVER">
-      <menus>
-        <Menu mnemonicParsing="false" text="Mon compte">
-          <items>
-            <MenuItem mnemonicParsing="false" text="menu" />
-            <MenuItem mnemonicParsing="false" text="Quit" />
-          </items>
-        </Menu>
-      </menus>
-    </MenuBar>
-    <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
-      <children>
-            <GridPane prefHeight="371.0" prefWidth="640.0">
-              <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-              </columnConstraints>
-              <rowConstraints>
-                <RowConstraints maxHeight="298.0" minHeight="10.0" prefHeight="297.0" vgrow="SOMETIMES" />
-                <RowConstraints maxHeight="179.0" minHeight="10.0" prefHeight="74.0" vgrow="SOMETIMES" />
-              </rowConstraints>
-               <children>
-                  <TableView fx:id="tableModulesProf" onMouseClicked="#SelectionModule" prefHeight="247.0" prefWidth="640.0">
-                     <columns>
-                        <TableColumn fx:id="coursColumn" prefWidth="639.0" text="liste cours" />
-                     </columns>
-                  </TableView>
-                  <ComboBox prefHeight="44.0" prefWidth="640.0" promptText="selectionner un module " GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
-               </children>
-            </GridPane>
-      </children>
-    </AnchorPane>
-  </children>
-</fx:root>
+<AnchorPane fx:id="anchorListeModule" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.ModulesProfController">
+   <children>
+      <VBox prefHeight="400.0" prefWidth="640.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <children>
+          <MenuBar VBox.vgrow="NEVER">
+            <menus>
+              <Menu mnemonicParsing="false" text="Mon compte">
+                <items>
+                  <MenuItem fx:id="retourMenu" mnemonicParsing="false" onAction="#fonctionRetour" text="retour au menu" />
+                  <MenuItem fx:id="quitterMenu" mnemonicParsing="false" onAction="#fonctionQuit" text="Quit" />
+                </items>
+              </Menu>
+            </menus>
+          </MenuBar>
+          <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
+            <children>
+                  <GridPane prefHeight="371.0" prefWidth="640.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                    <columnConstraints>
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                      <RowConstraints maxHeight="298.0" minHeight="10.0" prefHeight="297.0" vgrow="SOMETIMES" />
+                      <RowConstraints maxHeight="179.0" minHeight="10.0" prefHeight="74.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                     <children>
+                        <TableView fx:id="tableModulesProf" onMouseClicked="#SelectionModule" prefHeight="247.0" prefWidth="640.0">
+                           <columns>
+                              <TableColumn fx:id="coursColumn" prefWidth="639.0" text="liste cours" />
+                           </columns>
+                           <columnResizePolicy>
+                              <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                           </columnResizePolicy>
+                        </TableView>
+                        <ComboBox fx:id="selectionModuleCombo" onMouseClicked="#SelectionModule" prefHeight="46.0" prefWidth="299.0" promptText="selection module" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
+                     </children>
+                  </GridPane>
+            </children>
+          </AnchorPane>
+        </children>
+      </VBox>
+   </children>
+</AnchorPane>
